# doc_extractor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  sample_drawing.txt  sample_output.xlsx
doc_extractor/: __init__.py  extractor.py  main.py
tests/: test_extractor.py  test_ui_helpers.py
